--- a/Krótkie przykłady z książki/1. Używanie selektorów, filtrów i stylów CSS/filtry css.html
+++ b/Krótkie przykłady z książki/1. Używanie selektorów, filtrów i stylów CSS/filtry css.html
@@ -3,7 +3,7 @@
     <head>
         <title>1.2 Używanie selektorów, filtrów i stylów CSS</title>
 
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="../style.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 
