--- a/Krótkie przykłady z książki/1. Używanie selektorów, filtrów i stylów CSS/wybieranie elem dom wg atrybutów.html
+++ b/Krótkie przykłady z książki/1. Używanie selektorów, filtrów i stylów CSS/wybieranie elem dom wg atrybutów.html
@@ -3,7 +3,7 @@
     <head>
         <title>1.3 Używanie selektorów, filtrów i stylów CSS</title>
 
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="../style.css">
         <style>
             .google-icon{
                 background: url("obrazy/google-logo.jpg") no-repeat;
