Changed the progress bar color to be more eye friendly.

--- a/Progress-bar.html
+++ b/Progress-bar.html
@@ -20,7 +20,7 @@
         .progress-bar-fill{
             height: 22px;
             display: block;
-            background-color: #33cc33;
+            background-color: #AAee33;
             border-radius: 3px;
             width: 0px;
             transition: width 500ms ease-in-out;
