dodanie kolejnego przykładu 'dowiazania elem. do zdarzenia'

--- a/Krótkie przykłady z książki/2. Praca ze zdarzeniami/Wstępne ładowanie obrazów.html
+++ b/Krótkie przykłady z książki/2. Praca ze zdarzeniami/Wstępne ładowanie obrazów.html
@@ -27,15 +27,18 @@
                    });
                }
            </script>
-        <script src="wyswietlanie-alertu-w-momencie-opuszczenia-strony"></script>
+        <script src="wyswietlanie-alertu-w-momencie-opuszczenia-strony.js"></script>
         <script src="dowiązanie-programu-obsługi-zdarzenia.js"></script>
     </head>
     <body>
         <div class="gallery">
         </div>
 
-        <div class="mylink" style="padding:20px; border:1px solid #000">Kliknij aby przetestować dowiązania</div>
+        <div class="mylink" style="display: block; width: 60%; margin: 10px auto; background: #ddd; padding: 20px; border: 1px solid #000; text-align: center; font-size: 1.3em;">Kliknij aby przetestować dowiązania</div>
 
-
+        <div class="conteiner">
+            <div class="box" style="display: block; margin: 10px; width: 50px; height: 50px; border: 1px solid #3b96de; border-radius: 26px; background: #59a4e0; float: left;"></div>
+        </div>
+        <div style="clear:both"></div>
     </body>
 </html>
