dodanie kolejnego przykładu dowiązania do elementu programu obsługi zdarzenia

--- a/Krótkie przykłady z książki/2. Praca ze zdarzeniami/Wstępne ładowanie obrazów.html
+++ b/Krótkie przykłady z książki/2. Praca ze zdarzeniami/Wstępne ładowanie obrazów.html
@@ -36,9 +36,16 @@
 
         <div class="mylink" style="display: block; width: 60%; margin: 10px auto; background: #ddd; padding: 20px; border: 1px solid #000; text-align: center; font-size: 1.3em;">Kliknij aby przetestować dowiązania</div>
 
-        <div class="conteiner">
+        <div class="conteinerwithbox">
             <div class="box" style="display: block; margin: 10px; width: 50px; height: 50px; border: 1px solid #3b96de; border-radius: 26px; background: #59a4e0; float: left;"></div>
         </div>
         <div style="clear:both"></div>
+
+        <div class="container" style="width: 50px; height:50px; background: #ccc; margin: 10px; display: block; float: left">
+            <div class="block" style="width: 20px; height:20px; background: #000; margin: 15px;"></div>
+        </div>
+        <div class="container" style="width: 50px; height:50px; background: #ccc; margin: 10px; display: block; float: left">
+            <div class="block" style="width: 20px; height:20px; background: #000"></div>
+        </div>
     </body>
 </html>
